# forest

./: .gitignore  CHANGELOG.md  Cargo.toml  HELP.md  README.md  out.csv  out.json  out.txt
src/: args.rs  main.rs
src/analysis/: extractor.rs  mod.rs  type_inference.rs  visitor.rs
src/models/: container_info.rs  data_structure_info.rs  var_info.rs
src/output/: formatter.rs
src/utils/: file_utils.rs
