[package]
name = "forest"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Crosbie"]
description = "See the forest for the trees."
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.100", features = ["full", "visit", "extra-traits"] }
quote = "1.0.40"
visit = "0.1.0"
proc-macro2 = "1.0.94"
